--- a/.dockerignore
+++ b/.dockerignore
@@ -315,7 +315,7 @@ profile_default/
 ipython_config.py
 .pdm.toml
 __pypackages__/
-celerybeat-schedule
+celerybeat-schedule.*
 celerybeat.pid
 *.sage.py
 .env
@@ -342,3 +342,5 @@ cython_debug/
 .idea
 .pre-commit-config.yaml
 .git
+data/
+code_files/
