--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ profile_default/
 ipython_config.py
 .pdm.toml
 __pypackages__/
-celerybeat-schedule
+celerybeat-schedule.*
 celerybeat.pid
 *.sage.py
 .env
@@ -133,3 +133,4 @@ cython_debug/
 /media/*
 /log/*
 /code_files/
+/data/
