--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,15 @@ python = "^3.11"
 django = "^4.2.3"
 djangorestframework = "^3.14.0"
 flake8 = "^6.1.0"
+celery = "^5.3.1"
+django-celery-results = "^2.5.1"
+django-celery-beat = "^2.5.0"
+redis = "^4.6.0"
+psycopg2-binary = "^2.9.7"
+python-dotenv = "^1.0.0"
+d = "^0.2.2"
+django-crispy-forms = "^2.0"
+crispy-bootstrap5 = "^0.7"
 
 
 [build-system]
