--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,16 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 crashtest==0.4.1
+crispy-bootstrap5==0.7
 cron-descriptor==1.4.0
 cryptography==41.0.2
+cssselect==1.2.0
+d==0.2.2
 distlib==0.3.7
 Django==4.2.3
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
+django-crispy-forms==2.0
 django-timezone-field==5.1
 djangorestframework==3.14.0
 dulwich==0.21.5
@@ -37,6 +41,8 @@ jsonschema-specifications==2023.7.1
 keyring==23.13.1
 kombu==5.3.1
 lockfile==0.12.2
+lxml==4.9.3
+Markdown==3.4.4
 mccabe==0.7.0
 more-itertools==10.0.0
 msgpack==1.0.5
@@ -53,7 +59,9 @@ ptyprocess==0.7.0
 pycodestyle==2.11.0
 pycparser==2.21
 pyflakes==3.1.0
+Pygments==2.16.1
 pyproject_hooks==1.0.0
+pyquery==2.0.0
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
